# klaribase-django-saas

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: backends.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/serializers/: serializers.py  token.py
accounts/views/: change_password.py  forgot_password.py  login_username.py  logout.py  me.py  reset_password.py  signup.py  token.py
klaribase/: asgi.py  settings.py  urls.py  wsgi.py
tenants/: admin.py  models.py
tenants/middleware/: dev_tenant.py
