[project]
name = "klaribase"
version = "0.1.0"
description = "Multi-tenant Django SaaS starter"
authors = [
    { name = "Santosh Gawande", email = "gawandesantos@gmail.com" }
]
dependencies = [
    "Django>=4.2",
    "djangorestframework",
    "psycopg2-binary"
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pre-commit"
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.setuptools]
packages = ["klaribase", "accounts"]
